# ra

./: Cargo.toml  README.md  build.rs  device-ra4m1.x  ra.yaml  update-pacs.py  update.sh
.github/workflows/: cicd.yml
pac/ra2a1/: Cargo.toml  README.md
pac/ra2e1/: Cargo.toml  README.md
pac/ra2e2/: Cargo.toml  README.md
pac/ra2l1/: Cargo.toml  README.md
pac/ra4e1/: Cargo.toml  README.md
pac/ra4m1/: Cargo.toml  README.md
pac/ra4m2/: Cargo.toml  README.md
pac/ra4m3/: Cargo.toml  README.md
pac/ra4w1/: Cargo.toml  README.md
pac/ra6e1/: Cargo.toml  README.md
pac/ra6m1/: Cargo.toml  README.md
pac/ra6m2/: Cargo.toml  README.md
pac/ra6m3/: Cargo.toml  README.md
pac/ra6m4/: Cargo.toml  README.md
pac/ra6t1/: Cargo.toml  README.md
pac/ra6t2/: Cargo.toml  README.md
src/: _vectors.rs  acmplp.rs  adc.rs  adc140.rs  agt0.rs  bus.rs  cac.rs  can0.rs  crc.rs  ctsu.rs  dac12.rs  dac8.rs  dbg.rs  dma.rs  dmac0.rs  doc.rs  dtc.rs  elc.rs  fcache.rs  gpt162.rs  gpt320.rs  gpt_ops.rs  icu.rs  iic0.rs  iic1.rs  iwdt.rs  kint.rs  lib.rs  mmpu.rs  mstp.rs  opamp.rs  pfs.rs  pmisc.rs  poeg.rs  port0.rs  port1.rs  rtc.rs  sci0.rs  sci2.rs  slcdc.rs  (+10 more)
src/acmplp/: regs.rs  vals.rs
src/adc/: regs.rs
src/adc140/: regs.rs  vals.rs
src/agt0/: regs.rs  vals.rs
src/bus/: regs.rs  vals.rs
src/cac/: regs.rs  vals.rs
src/can0/: regs.rs  vals.rs
src/crc/: regs.rs  vals.rs
src/ctsu/: regs.rs  vals.rs
src/dac12/: regs.rs  vals.rs
src/dac8/: regs.rs  vals.rs
src/dbg/: regs.rs  vals.rs
src/dma/: regs.rs  vals.rs
src/dmac0/: regs.rs  vals.rs
src/doc/: regs.rs  vals.rs
src/dtc/: regs.rs  vals.rs
src/elc/: regs.rs  vals.rs
src/fcache/: regs.rs  vals.rs
src/gpt162/: regs.rs  vals.rs
src/gpt320/: regs.rs
src/gpt_ops/: regs.rs  vals.rs
src/icu/: regs.rs  vals.rs
src/iic0/: regs.rs  vals.rs
src/iic1/: regs.rs  vals.rs
src/iwdt/: regs.rs  vals.rs
src/kint/: regs.rs  vals.rs
src/mmpu/: regs.rs  vals.rs
src/mstp/: regs.rs  vals.rs
src/opamp/: regs.rs  vals.rs
src/pfs/: regs.rs  vals.rs
src/pmisc/: regs.rs  vals.rs
src/poeg/: regs.rs  vals.rs
src/port0/: regs.rs  vals.rs
src/port1/: regs.rs  vals.rs
src/rtc/: regs.rs  vals.rs
src/sci0/: regs.rs  vals.rs
src/sci2/: regs.rs  vals.rs
svd/: R7FA4M1AB.svd  R7FA4M1AB.yaml
(+35 files in other folders)
