[package]
name = "ra-pac"
version = "7.0.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/Normal-Embedded/ra"
description = "Peripheral Access Crate (PAC) for Renessas chips."

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = { version = ">=0.6.15,<0.8", optional = true }
defmt = { version = "0.3.10", optional = true }

[features]
default = []
rt = ["cortex-m-rt/device"]

r7fa0e107 = []
r7fa2a1ab = []
r7fa2a2ad = []
r7fa2e1a9 = []
r7fa2e2a7 = []
r7fa2e307 = []
r7fa2l1ab = []
r7fa4e2b9 = []
r7fa4e10d = []
r7fa4m1ab = []
r7fa4m2ad = []
r7fa4m3af = []
r7fa4t1bb = []
r7fa4w1ad = []
r7fa6e2bb = []
r7fa6e10f = []
r7fa6m1ad = []
r7fa6m2af = []
r7fa6m3ah = []
r7fa6m4af = []
r7fa6m5bh = []
r7fa6t1ad = []
r7fa6t2bd = []
r7fa6t3bb = []
r7fa8d1bh = []
r7fa8m1ah = []
r7fa8t1ah = []

ra0e1 = ["r7fa0e107"]

ra2a1 = ["r7fa2a1ab"]
ra2a2 = ["r7fa2a2ad"]
ra2e1 = ["r7fa2e1a9"]
ra2e2 = ["r7fa2e2a7"]
ra2e3 = ["r7fa2e307"]
ra2l1 = ["r7fa2l1ab"]

ra4e1 = ["r7fa4e10d"]
ra4e2 = ["r7fa4e2b9"]
ra4m1 = ["r7fa4m1ab"]
ra4m2 = ["r7fa4m2ad"]
ra4m3 = ["r7fa4m3af"]
ra4t1 = ["r7fa4t1bb"]
ra4w1 = ["r7fa4w1ad"]

ra6e1 = ["r7fa6e10f"]
ra6e2 = ["r7fa6e2bb"]
ra6m1 = ["r7fa6m1ad"]
ra6m2 = ["r7fa6m2af"]
ra6m3 = ["r7fa6m3ah"]
ra6m4 = ["r7fa6m4af"]
ra6m5 = ["r7fa6m5bh"]
ra6t1 = ["r7fa6t1ad"]
ra6t2 = ["r7fa6t2bd"]
ra6t3 = ["r7fa6t3bb"]

ra8d1 = ["r7fa8d1bh"]
ra8m1 = ["r7fa8m1ah"]
ra8t1 = ["r7fa8t1ah"]
defmt = ["dep:defmt"]

[package.metadata.embassy_docs]
src_base = "https://github.com/embassy-rs/rp-pac/blob/v$VERSION/src/"
src_base_git = "https://github.com/embassy-rs/rp-pac/blob/$COMMIT/src/"
flavors = [
    { name = "rp2040", features = ["rp2040"], target = "thumbv6m-none-eabi" },
    { name = "rp235x", features = ["rp235x"], target = "thumbv8m.main-none-eabihf" },
]