[package]
name = "ra-pac"
version = "7.0.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/Normal-Embedded/ra"
description = "Peripheral Access Crate (PAC) for Renessas chips."

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = { version = ">=0.6.15,<0.8", optional = true }
defmt = { version = "0.3.10", optional = true }

[features]
default = []
rt = ["cortex-m-rt/device"]
